fix backdrop not showing on equipment management and equipment transaction

--- a/src/view/styles/css/dashboard.css
+++ b/src/view/styles/css/dashboard.css
@@ -1,4 +1,16 @@
 /* dashboard.css */
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Inter', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
+}
+.main-content {
+    margin-left: 300px;
+    padding: 20px;
+    margin-bottom: 20px;
+    width: auto;
+}
 body {
     background-color: #181818;
     color: #ffffff;
@@ -12,16 +24,6 @@ h1 {
     font-size: 28px;
 }
 
-.main-content {
-    margin-left: 350px;
-    /* Adjust according to your sidebar width */
-    padding: 20px;
-    background-color: #242424;
-    border-radius: 8px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
-    margin-bottom: 20px;
-    width: auto;
-}
 
 /* Responsive Design */
 @media (max-width: 768px) {
