--- a/src/view/styles/css/equipment-manager.css
+++ b/src/view/styles/css/equipment-manager.css
@@ -148,11 +148,7 @@ body {
 .modal .btn-close {
     margin: -0.5rem -0.5rem -0.5rem auto;
 }
-
-.modal-backdrop.show {
-    display:none;
-}
-
+ 
 /* Enhanced Form Styling */
 .modal .mb-3 {
     margin-bottom: 2rem !important;
